# tonic-no-codegen-example

./: Cargo.toml  LICENSE  README.md
src/: client.rs  protobuf_message_tonic_codec.rs  server.rs  shared.rs
